--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,5 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.mcxiaoke.volley:library:1.0.18'
     compile 'com.android.support:cardview-v7:23.0.0'
+    compile 'com.android.support:palette-v7:23.0.0'
 }
